2025-12-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.7-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.7-alpha03: Chafing';git push
	git tag -a 5.3.7-alpha03 -m 'all: Add LZF';git push --tags

	* Prevent LZF and LZ4 invocation unless ENABLE_NEP defined (otherwise must write NCO stub functions for NEP codecs)

	* NCO 5.3.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.7-alpha02: Black-eyed P\'s';git push
	git tag -a 5.3.7-alpha02 -m 'all: NEP, LZ4 working; ncremap: hone nco_mss_val_get_dbl()-suggested ncatted command; ncks: jsn att/var fmt fix';git push --tags

	* LZF infrastructure added but not working after library rebuild. Does no harm. Fix next version.

	* LZ4 works after libnetcdf rebuild!

	* Add support for standalone (not BLOSC) LZ4 filter handling when NEP installed

	* Add configure machinery for netCDF Expansion Pack (NEP) support

2025-12-02  Charlie Zender  <zender@uci.edu>

	* Improve suggested ncatted command when mss_val_dbl = NaN in nco_mss_val_get_dbl()

2025-11-20  Charlie Zender  <zender@uci.edu>

	* Fix variable JSON format to always be type = 2 and print type, shape

	* Fix jsn_att_fmt regression, restore printing attributes as objects, reported by Andrew Barna

2025-11-06  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.7-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.7-alpha01: Reuptake Inhibitor';git push
	git tag -a 5.3.7-alpha01 -m 'Functionally identical to 5.3.6 except for two ncclimo name generation corner case fixes';git push --tags

	* ncclimo MPAS automatic name generation fixed to insert dot only when caseid option is used

	* ncclimo fix trim_leading_zeros() to work when input year is 0

2025-10-29  Charlie Zender  <zender@uci.edu>

	* ncks: Note that i,j are lat,lon not lon,lat with CMCC-ESM2 convention (opposite of usual NEMO CMIP5 convention)

2025-10-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.6 release procedure: